--- a/ui/style.css
+++ b/ui/style.css
@@ -20,7 +20,9 @@ body {
     height: 200px;
 }
 
-.container{max-width:800px;
-margin:0 auto;
-color:red;
-font-family:sans-serif;}
+.container{
+    font-family: sans-serif;
+    background-color: rgb(244, 54, 89);
+    margin-top: 75px;   
+    max-width: 800px;
+}
