--- a/ui/style.css
+++ b/ui/style.css
@@ -1,28 +1,26 @@
-body {
-    font-family: sans-serif;
-    background-color: lightgrey;
-    margin-top: 75px;
-}
-
-.center {
-    text-align: center;
-}
-
-.text-big {
-    font-size: 300%;
-}
-
-.bold {
-    font-weight: bold;
-}
-
-.img-medium {
-    height: 200px;
-}
-
-.container{
-    font-family: sans-serif;
-    background-color: rgb(244, 54, 89);
-    margin-top: 75px;   
-    max-width: 800px;
-}
+<html>
+<head>
+<title>
+    Article One/Denzzil Jacob
+</title>    
+<meta name="viewport" content="width=device-width,initial-scale=1"/>
+ <link href="/ui/style.css" rel="stylesheet" />
+</head>    
+<body> 
+<divclass="container">
+<Div>
+<a href="/">Home</a>    
+</Div>
+<hr/>
+<h3>
+Article One
+</h3>
+<div>
+    October 10th 2016
+</div>
+<div>
+   
+</div>
+</body>    
+    
+</html>
