--- a/ui/style.css
+++ b/ui/style.css
@@ -1,26 +1,31 @@
-<html>
-<head>
-<title>
-    Article One/Denzzil Jacob
-</title>    
-<meta name="viewport" content="width=device-width,initial-scale=1"/>
- <link href="/ui/style.css" rel="stylesheet" />
-</head>    
-<body> 
-<divclass="container">
-<Div>
-<a href="/">Home</a>    
-</Div>
-<hr/>
-<h3>
-Article One
-</h3>
-<div>
-    October 10th 2016
-</div>
-<div>
-   
-</div>
-</body>    
-    
-</html>
+body {
+    font-family:sans-serif;
+background-color:#0390f4;
+margin-top:75px;
+}
+
+.center
+{text-align:center;
+}
+
+.text-big{
+    font-size:300%
+}
+
+.bold{
+    font-weight:bold;
+}
+
+.img-medium{
+    height:200px;
+}
+
+.container{
+max-width:800px;
+margin:0 auto;
+color:rgb(231, 236, 234);
+font-family:sans-serif;
+padding-top:60px;
+padding-right:20px;
+padding-left:20px;
+}
