--- a/ui/style.css
+++ b/ui/style.css
@@ -1,5 +1,4 @@
-body {
-    font-family:sans-serif;
+body {font-family:sans-serif;
 margin-top:60px;
 }
 
@@ -18,7 +17,6 @@ margin-top:60px;
 .img-medium{
     height:200px;
 }
-
 .container{
 max-width:800px;
 margin:0 auto;
