--- a/ui/style.css
+++ b/ui/style.css
@@ -21,6 +21,7 @@ margin-top:120px;
 max-width:800px;
 margin:0 auto;
 color:rgb(231, 236, 234);
+background-color:blue;
 font-family:sans-serif;
 padding-right:100px;
 padding-left:20px;
