--- a/ui/style.css
+++ b/ui/style.css
@@ -21,7 +21,7 @@ margin-top:120px;
 .container{
 max-width:800px;
 margin:0 auto;
-color:red;
+color:grey;
 background-color:blue;
 font-family:sans-serif;
 padding-right:100px;
