[imad-console] Updates ui/style.css

--- a/ui/style.css
+++ b/ui/style.css
@@ -21,8 +21,8 @@ margin-top:120px;
 .container{
 max-width:800px;
 margin:0 auto;
-color:grey;
-background-color:blue;
+color:blue;
+background-color:grey;
 font-family:sans-serif;
 padding-right:100px;
 padding-left:20px;
