--- a/ui/style.css
+++ b/ui/style.css
@@ -21,8 +21,7 @@ margin-top:120px;
 .container{
 max-width:800px;
 margin:0 auto;
-color:green;
-background-color:grey;
+color:grey;
 font-family:sans-serif;
 padding-right:100px;
 padding-left:20px;
