[imad-console] Updates ui/style.css

--- a/ui/style.css
+++ b/ui/style.css
@@ -8,6 +8,7 @@ margin:0 auto;
 {text-align:center;
 max-width:800px;
 margin:0 auto;
+color:red;
 }
 
 .text-big{
@@ -25,7 +26,7 @@ margin:0 auto;
 .container{
 max-width:800px;
 margin:0 auto;
-color:grey;
+color:blue;
 font-family:sans-serif;
 padding-right:100px;
 padding-left:20px;
